# ffmpegDemo1

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cpy/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniHelper.cpp  jni2.cpp  jni2.h  native-lib.cpp  simplest_ffmpeg_player.cpp
app/src/main/java/com/example/cpy/ffmpegdemo/: AppApplication.java  AssetsUtil.java  ContextUtil.java  InitMaterialsTaskAsyncTask.java  JNI.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/cpy/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
